Trash: when auto empty trash is enabled, Nautilus can't open the trash settings section of GNOME Settings
Affected version
- nautilus-45.2.1-1.fc39.x86_64 (can't test nightly flatpak because of #3343)
Steps to reproduce
- Go to GNOME Settings > Privacy > File History & Trash
- Enable "Automatically Delete Trash Content"
- Open Nautilus and go to the Trash view
- Click in the "Settings" button from the "Items in trash older than..." banner
Seen behavior
The File History & Trash section of Settings won't appear.
This is broken since GNOME 45, which introduced the new Privacy panel (gnome-control-center!1819 (merged)) with subpages. In GNOME 46, gnome-control-center!2038 (merged) / gnome-control-center!2288 (merged) added the possibility to open panel subpages, but it seems that only the System panel is currently supported the Privacy panel is yet to be supported.
Edited by Automeris naranja