location-banner: Update panel name

Usage page was embedded into privacy and we didn't update the
code to reflect that. Change the name in the dbus request to
launch the containing panel, and also specify the subpage name.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/3348
(cherry picked from commit 855f45b10ad35d87f063713788a2ab2a61fc38b6)